[explorer] Fix label overflow

--- a/apps/explorer/src/themes/common.less
+++ b/apps/explorer/src/themes/common.less
@@ -2,3 +2,7 @@
 .ant-menu-vertical-left.ant-menu-sub:not([class*="-active"]), .ant-menu-vertical-right.ant-menu-sub:not([class*="-active"]), .ant-menu-vertical.ant-menu-sub:not([class*="-active"]) {
     overflow-y: scroll;
   }
+
+  .ant-typography {
+    overflow-wrap: anywhere;
+  }
